--- a/app/templates/category/index.html.twig
+++ b/app/templates/category/index.html.twig
@@ -43,8 +43,9 @@
             {{ knp_pagination_render(pagination) }}
         </div>
     {% else %}
-        <div class="alert alert-info" role="alert">
-            {{ 'message.empty_list'|trans }}
-        </div>
+        {% include 'default/_single_alert_message.html.twig' with {
+            type: 'warning',
+            message: 'message.empty_list'|trans
+        } %}
     {% endif %}
 {% endblock %}
