--- a/app/templates/base.html.twig
+++ b/app/templates/base.html.twig
@@ -2,11 +2,9 @@
 <html lang="pl">
 <head>
     <meta charset="UTF-8">
-    <title>{% block title %}Welcome!{% endblock %}</title>
-    {% block stylesheets %}
-        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-        <link rel="stylesheet" href="{{ asset('css/styles.css') }}">
-    {% endblock %}
+    <title>Welcome!</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <link rel="stylesheet" href="{{ asset('css/styles.css') }}">
 </head>
 <body>
 <div class="container-fluid">
@@ -15,25 +13,23 @@
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                 <div class="navbar-nav">
-                    <a class="nav-item nav-link active" href="{{ url('main_index') }}">{{ 'label_main_page'|trans }} <span class="sr-only">(current)</span></a>
-                    <a class="nav-item nav-link" href="{{url('event_index')}}">{{ 'label_events'|trans }}</a>
-                    <a class="nav-item nav-link" href="{{ url('contact_index') }}">{{ 'label_contacts'|trans }}</a>
-                    <a class="nav-item nav-link " href="{{ url('category_index') }}">{{ 'label_categories'|trans }}</a>
+                    <a class="nav-item nav-link active" href="{{ url('main_index') }}">Main Page <span class="sr-only">(current)</span></a>
+                    <a class="nav-item nav-link" href="{{url('event_index')}}">Events</a>
+                    <a class="nav-item nav-link" href="{{ url('contact_index') }}">Contacts</a>
+                    <a class="nav-item nav-link" href="{{ url('category_index') }}">Categories</a>
                 </div>
             </div>
         </nav>
         <!-- Login button -->
-        <a href="{{ url('app_logout') }}"><div class="right_element">{{ 'action_logout'|trans }}</div></a>
+        <a href="{{ url('app_logout') }}"><div class="right_element">Logout</div></a>
         {#        {% else %}#}
         {#                <a href="{{ url('app_login') }}"><div class="right_element">{{ 'action_login'|trans }}</div></a>#}
     {% endif %}
 
     {% block body %}{% endblock %}
 </div>
-{% block javascripts %}
-    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
-{% endblock %}
+<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
 </body>
 </html>
