--- a/app/templates/category/show.html.twig
+++ b/app/templates/category/show.html.twig
@@ -1,30 +1,30 @@
 {% extends 'base.html.twig' %}
 
 {% block title %}
-    {{ 'title.category_details'|trans({'%id%': category.id|default('')}) }}
+    Category Details {{ category.id|default('') }}
 {% endblock %}
 
 {% block body %}
-    <h1>{{ 'title.category_details'|trans({'%id%': category.id|default('')}) }}</h1>
+    <h1>Category Details {{ category.id|default('') }}</h1>
     {% if category is defined %}
         <dl class="dl-horizontal">
-            <dt>{{ 'label.id'|trans }}</dt>
+            <dt>ID</dt>
             <dd>{{ category.id }}</dd>
-            <dt>{{ 'label.created_at'|trans }}</dt>
-            <dd>{{ category.createdAt|date('Y/m/d') }}</dd>
-            <dt>{{ 'label.updated_at'|trans }}</dt>
-            <dd>{{ category.updatedAt|date('Y/m/d') }}</dd>
-            <dt>{{ 'label.title'|trans }}</dt>
+            <dt>Created At</dt>
+            <dd>{{ category.createdAt|format_date('long') }}</dd>
+            <dt>Updated At</dt>
+            <dd>{{ category.updatedAt|format_date('long') }}</dd>
+            <dt>Title</dt>
             <dd>{{ category.title }}</dd>
         </dl>
         <p>
-            <a href="{{ path('category_index') }}" title="{{ 'action.back_to_list'|trans }}">
-                {{ 'action.back_to_list'|trans }}
+            <a href="{{ path('category_index') }}" title="Back to list">
+                Back to list
             </a>
         </p>
     {% else %}
         <p>
-            {{ 'message.record_not_found'|trans }}
+            Category not found.
         </p>
     {% endif %}
 {% endblock %}
