--- a/app/templates/contact/create.html.twig
+++ b/app/templates/contact/create.html.twig
@@ -1,14 +1,16 @@
 {% block body %}
-    <h1>{{ 'title_contact_create'|trans }}</h1>
+    <h1>{{ 'Create Contact' }}</h1>
     {{ form_start(form, { method: 'POST', action: url('contact_create') }) }}
     {{ form_widget(form) }}
     <div class="form-group row float-sm-right">
-        <input type="submit" value="{{ 'action.save'|trans }}" class="btn btn-primary"/>
+        <input type="submit" value="{{ 'Save' }}" class="btn btn-primary"/>
     </div>
     <div class="form-group row float-sm-left">
         <a href="{{ path('contact_index') }}" class="btn btn-link">
-            {{ 'action.back_to_list'|trans }}
+            {{ 'Back to list' }}
         </a>
     </div>
     {{ form_end(form) }}
 {% endblock %}
+
+{% extends 'base.html.twig' %}
