--- a/app/templates/contact/show.html.twig
+++ b/app/templates/contact/show.html.twig
@@ -1,42 +1,35 @@
 {% extends 'base.html.twig' %}
 
 {% block title %}
-    {{ 'title_contact_details'|trans({'%id%': contact.id|default('')}) }}
+    {{ 'Contact Details' }} {{ contact.id|default('') }}
 {% endblock %}
 
 {% block body %}
-    <h1>{{ 'title_contact_details'|trans({'%id%': contact.id|default('')}) }}</h1>
-    {% if contact is defined %}
+    <h1>{{ 'Contact Details' }} {{ contact.id|default('') }}</h1>
+    <a href="{{ url('contact_edit', {id: contact.id}) }}" title="{{ 'Edit' }}">
+        {{ 'Edit' }}
+    </a>
+    {% if contact is defined and contact %}
         <dl class="dl-horizontal">
-            <dt>{{ 'label_id'|trans }}</dt>
+            <dt>{{ 'ID' }}</dt>
             <dd>{{ contact.id }}</dd>
-            <dt>{{ 'label_name'|trans }}</dt>
+            <dt>{{ 'Name' }}</dt>
             <dd>{{ contact.name }}</dd>
-            <dt>{{ 'label_surname'|trans }}</dt>
+            <dt>{{ 'Surname' }}</dt>
             <dd>{{ contact.surname }}</dd>
-            <dt>{{ 'label_phone'|trans }}</dt>
+            <dt>{{ 'Phone' }}</dt>
             <dd>{{ contact.phone }}</dd>
-            <dt>{{ 'label_address'|trans }}</dt>
+            <dt>{{ 'Address' }}</dt>
             <dd>{{ contact.address }}</dd>
-            <dt>{{ 'label_created_at'|trans }}</dt>
-            <dd>{{ contact.createdAt|date('Y/m/d H:i') }}</dd>
-            <dt>{{ 'label_updated_at'|trans }}</dt>
-            <dd>{{ contact.updatedAt|date('Y/m/d H:i') }}</dd>
         </dl>
         <p>
-            <a href="{{ url('contact_edit', {id: contact.id}) }}" title="{{ 'action_edit'|trans }}">
-                {{ 'action_edit'|trans }}
-            </a>
-            <a href="{{ url('contact_delete', {id: contact.id}) }}" title="{{ 'action.delete'|trans }}">
-                {{ 'action.delete'|trans }}
-            </a>
-            <a href="{{ url('contact_index') }}" title="{{ 'action.back_to_list'|trans }}">
-                {{ 'action.back_to_list'|trans }}
+            <a href="{{ url('contact_index') }}" title="{{ 'Back to list' }}">
+                {{ 'Back to list' }}
             </a>
         </p>
     {% else %}
         <p>
-            {{ 'message_item_not_found'|trans }}
+            {{ 'Contact not found.' }}
         </p>
     {% endif %}
 {% endblock %}
