--- a/app/templates/contact/edit.html.twig
+++ b/app/templates/contact/edit.html.twig
@@ -1,19 +1,19 @@
 {% extends 'base.html.twig' %}
 
 {% block title %}
-    {{ 'Edit Contact' }} {{ contact.id|default('') }}
+    {{ 'title.contact_edit'|trans({'%id%': contact.id|default('')}) }}
 {% endblock %}
 
 {% block body %}
-    <h1>{{ 'Edit Contact' }} {{ contact.id|default('') }}</h1>
-    {{ form_start(form, { method: 'PUT', action: url('contact_edit', {id: contact.id}) }) }}
+    <h1>{{ 'title.contact_edit'|trans({'%id%': contact.id|default('')}) }}</h1>
+    {{ form_start(form) }}
     {{ form_widget(form) }}
     <div class="form-group row float-sm-right">
-        <input type="submit" value="{{ 'Save' }}" class="btn btn-primary" />
+        <input type="submit" value="{{ 'action.save'|trans }}" class="btn btn-primary" />
     </div>
     <div class="form-group row float-sm-left">
         <a href="{{ url('contact_index') }}" class="btn btn-link">
-            {{ 'Back to list' }}
+            {{ 'action.back_to_list'|trans }}
         </a>
     </div>
     {{ form_end(form) }}
