--- a/app/templates/event/show.html.twig
+++ b/app/templates/event/show.html.twig
@@ -1,34 +1,34 @@
 {% extends 'base.html.twig' %}
 
 {% block title %}
-    Event Details {{ event.id|default('') }}
+    {{ 'title.event_details'|trans({'%id%': event.id|default('')}) }}
 {% endblock %}
 
 {% block body %}
-    <h1>Event Details {{ event.id|default('') }}</h1>
+    <h1>{{ 'title.event_details'|trans({'%id%': event.id|default('')}) }}</h1>
     {% if event is defined %}
         <dl class="dl-horizontal">
-            <dt>ID</dt>
+            <dt>{{ 'label.id'|trans }}</dt>
             <dd>{{ event.id }}</dd>
-            <dt>Created At</dt>
+            <dt>{{ 'label.created_at'|trans }}</dt>
             <dd>{{ event.createdAt|format_date('long') }}</dd>
-            <dt>Updated At</dt>
+            <dt>{{ 'label.updated_at'|trans }}</dt>
             <dd>{{ event.updatedAt|format_date('long') }}</dd>
-            <dt>Title</dt>
+            <dt>{{ 'label.title'|trans }}</dt>
             <dd>{{ event.title }}</dd>
-            <dt>Category</dt>
+            <dt>{{ 'label.category'|trans }}</dt>
             <dd>{{ event.category.title }}</dd>
-            <dt>Event Date</dt>
+            <dt>{{ 'label.event_date'|trans }}</dt>
             <dd>{{ event.eventDate|date('Y/m/d H:i') }}</dd>
         </dl>
         <p>
-            <a href="{{ path('event_index') }}" title="Back to list">
-                Back to list
+            <a href="{{ url('event_index') }}" title="{{ 'action.back_to_list'|trans }}">
+                {{ 'action.back_to_list'|trans }}
             </a>
         </p>
     {% else %}
         <p>
-            Event not found.
+            {{ 'message.record_not_found'|trans }}
         </p>
     {% endif %}
 {% endblock %}
