--- a/app/templates/base.html.twig
+++ b/app/templates/base.html.twig
@@ -13,15 +13,15 @@
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                 <div class="navbar-nav">
-                    <a class="nav-item nav-link active" href="{{ url('main_index') }}">Main Page <span class="sr-only">(current)</span></a>
-                    <a class="nav-item nav-link" href="{{url('event_index')}}">Events</a>
-                    <a class="nav-item nav-link" href="{{ url('contact_index') }}">Contacts</a>
-                    <a class="nav-item nav-link" href="{{ url('category_index') }}">Categories</a>
+                    <a class="nav-item nav-link active" href="{{ url('main_index') }}">Strona główna <span class="sr-only">(current)</span></a>
+                    <a class="nav-item nav-link" href="{{url('event_index')}}">Wydarzenia</a>
+                    <a class="nav-item nav-link" href="{{ url('contact_index') }}">Kontakty</a>
+                    <a class="nav-item nav-link" href="{{ url('category_index') }}">Kategorie</a>
                 </div>
             </div>
         </nav>
         <!-- Login button -->
-        <a href="{{ url('app_logout') }}"><div class="right_element">Logout</div></a>
+        <a href="{{ url('app_logout') }}"><div class="right_element">Wyloguj</div></a>
         {#        {% else %}#}
         {#                <a href="{{ url('app_login') }}"><div class="right_element">{{ 'action_login'|trans }}</div></a>#}
     {% endif %}
