--- a/app/templates/category/create.html.twig
+++ b/app/templates/category/create.html.twig
@@ -1,19 +1,19 @@
 {% extends 'base.html.twig' %}
 
 {% block title %}
-    Create Category
+    {{ 'title.category_create'|trans }}
 {% endblock %}
 
 {% block body %}
-    <h1>Create Category</h1>
+    <h1>{{ 'title.category_create'|trans }}</h1>
     {{ form_start(form) }}
     {{ form_widget(form) }}
     <div class="form-group row float-sm-right">
-        <input type="submit" value="Save" class="btn btn-primary"/>
+        <input type="submit" value="{{ 'action.save'|trans }}" class="btn btn-primary"/>
     </div>
     <div class="form-group row float-sm-left">
-        <a href="{{ path('category_index') }}" class="btn btn-link">
-            Back to list
+        <a href="{{ url('category_index') }}" class="btn btn-link">
+            {{ 'action.back_to_list'|trans }}
         </a>
     </div>
     {{ form_end(form) }}
