--- a/app/templates/category/delete.html.twig
+++ b/app/templates/category/delete.html.twig
@@ -1,19 +1,19 @@
 {% extends 'base.html.twig' %}
 
 {% block title %}
-    Delete Category {{ category.id|default('') }}
+    {{ 'title.category_delete'|trans({'%id%': category.id|default('')}) }}
 {% endblock %}
 
 {% block body %}
-    <h1>Delete Category {{ category.id|default('') }}</h1>
+    <h1>{{ 'title.category_delete'|trans({'%id%': category.id|default('')}) }}</h1>
     {{ form_start(form) }}
     {{ form_widget(form) }}
     <div class="form-group row float-sm-right">
-        <input type="submit" value="Delete" class="btn btn-primary" />
+        <input type="submit" value="{{ 'action.delete'|trans }}" class="btn btn-primary" />
     </div>
     <div class="form-group row float-sm-left">
-        <a href="{{ path('category_index') }}" class="btn btn-link">
-            Back to list
+        <a href="{{ url('category_index') }}" class="btn btn-link">
+            {{ 'action.back_to_list'|trans }}
         </a>
     </div>
     {{ form_end(form) }}
