--- a/app/templates/category/edit.html.twig
+++ b/app/templates/category/edit.html.twig
@@ -1,7 +1,7 @@
 {% extends 'base.html.twig' %}
 
 {% block title %}
-    Edit Category {{ category.id|default('') }}
+    {{ 'title.category_edit'|trans({'%id%': category.id|default('')}) }}
 {% endblock %}
 
 {% block stylesheets %}
@@ -10,15 +10,15 @@
 {% endblock %}
 
 {% block body %}
-    <h1>Edit Category {{ category.id|default('') }}</h1>
+    <h1>{{ 'title.category_edit'|trans({'%id%': category.id|default('')}) }}</h1>
     {{ form_start(form) }}
     {{ form_widget(form) }}
     <div class="form-group row float-sm-right">
-        <input type="submit" value="Save" class="btn btn-primary"/>
+        <input type="submit" value="{{ 'action.save'|trans }}" class="btn btn-primary"/>
     </div>
     <div class="form-group row float-sm-left">
-        <a href="{{ path('category_index') }}" class="btn btn-link">
-            Back to list
+        <a href="{{ url('category_index') }}" class="btn btn-link">
+            {{ 'action.back_to_list'|trans }}
         </a>
     </div>
     {{ form_end(form) }}
