--- a/app/templates/contact/create.html.twig
+++ b/app/templates/contact/create.html.twig
@@ -1,16 +1,20 @@
+{% extends 'base.html.twig' %}
+
+{% block title %}
+    {{ 'title.contact_create'|trans }}
+{% endblock %}
+
 {% block body %}
-    <h1>{{ 'Create Contact' }}</h1>
-    {{ form_start(form, { method: 'POST', action: url('contact_create') }) }}
+    <h1>{{ 'title.contact_create'|trans }}</h1>
+    {{ form_start(form) }}
     {{ form_widget(form) }}
     <div class="form-group row float-sm-right">
-        <input type="submit" value="{{ 'Save' }}" class="btn btn-primary"/>
+        <input type="submit" value="{{ 'action.save'|trans }}" class="btn btn-primary"/>
     </div>
     <div class="form-group row float-sm-left">
         <a href="{{ path('contact_index') }}" class="btn btn-link">
-            {{ 'Back to list' }}
+            {{ 'action.back_to_list'|trans }}
         </a>
     </div>
     {{ form_end(form) }}
 {% endblock %}
-
-{% extends 'base.html.twig' %}
