--- a/app/templates/contact/delete.html.twig
+++ b/app/templates/contact/delete.html.twig
@@ -1,17 +1,19 @@
+{% extends 'base.html.twig' %}
+
 {% block title %}
-    {{ 'Delete Contact' }} {{ contact.id|default('') }}
+    {{ 'title.contact_delete'|trans({'%id%': contact.id|default('')}) }}
 {% endblock %}
 
 {% block body %}
-    <h1>{{ 'Delete Contact' }} {{ contact.id|default('') }}</h1>
-    {{ form_start(form, { method: 'DELETE', action: url('contact_delete', {id: contact.id}) }) }}
+    <h1>{{ 'title.contact_delete'|trans({'%id%': contact.id|default('')}) }}</h1>
+    {{ form_start(form) }}
     {{ form_widget(form) }}
     <div class="form-group row float-sm-right">
-        <input type="submit" value="{{ 'Delete' }}" class="btn btn-danger" />
+        <input type="submit" value="{{ 'action.delete'|trans }}" class="btn btn-danger" />
     </div>
     <div class="form-group row float-sm-left">
         <a href="{{ url('contact_index') }}" class="btn btn-link">
-            {{ 'Back to list' }}
+            {{ 'action.back_to_list'|trans }}
         </a>
     </div>
     {{ form_end(form) }}
