--- a/app/templates/event/create.html.twig
+++ b/app/templates/event/create.html.twig
@@ -1,19 +1,19 @@
 {% extends 'base.html.twig' %}
 
 {% block title %}
-    Create Event
+    {{ 'title.event_create'|trans }}
 {% endblock %}
 
 {% block body %}
-    <h1>Create Event</h1>
+    <h1>{{ 'title.event_create'|trans }}</h1>
     {{ form_start(form) }}
     {{ form_widget(form) }}
     <div class="form-group row float-sm-right">
-        <input type="submit" value="Save" class="btn btn-primary"/>
+        <input type="submit" value="{{ 'action.save'|trans }}" class="btn btn-primary"/>
     </div>
     <div class="form-group row float-sm-left">
         <a href="{{ path('event_index') }}" class="btn btn-link">
-            Back to list
+            {{ 'action.back_to_list'|trans }}
         </a>
     </div>
     {{ form_end(form) }}
