--- a/app/templates/event/delete.html.twig
+++ b/app/templates/event/delete.html.twig
@@ -1,25 +1,20 @@
 {% extends 'base.html.twig' %}
 
 {% block title %}
-    Delete Event {{ event.id|default('') }}
+    {{ 'title.event_delete'|trans({'%id%': event.id|default('')}) }}
 {% endblock %}
 
 {% block body %}
-    <h1>Delete Event {{ event.id|default('') }}</h1>
+    <h1>{{ 'title.event_delete'|trans({'%id%': event.id|default('')}) }}</h1>
     {{ form_start(form) }}
     {{ form_widget(form) }}
     <div class="form-group row float-sm-right">
-        <input type="submit" value="Delete" class="btn btn-primary" />
+        <input type="submit" value="{{ 'action.delete'|trans }}" class="btn btn-primary" />
     </div>
     <div class="form-group row float-sm-left">
         <a href="{{ path('event_index') }}" class="btn btn-link">
-            Back to list
+            {{ 'action.back_to_list'|trans }}
         </a>
     </div>
     {{ form_end(form) }}
-    {% if message is defined %}
-        <div class="alert alert-success" role="alert">
-            Successfully deleted.
-        </div>
-    {% endif %}
 {% endblock %}
