--- a/app/templates/main/index.html.twig
+++ b/app/templates/main/index.html.twig
@@ -1,21 +1,14 @@
 {% extends 'base.html.twig' %}
 
 {% block title %}
-    {{ 'Welcome to Personal Information Management Application'|trans }}
+    {{ 'message.welcome'|trans }}
 {% endblock %}
 
 {% block body %}
-    <div class="container">
-        <div class="title_of_page">
-            <h1>{{ 'Welcome to Personal Information Management Application'|trans }}</h1>
-        </div>
-
-        <div class="navigation">
+    <h1>{{ 'message.welcome'|trans }}</h1>
             <ul>
-                <li><a href="{{ path('event_index') }}" class="btn btn-outline-primary">{{ 'Events'|trans }}</a></li>
-                <li><a href="{{ path('contact_index') }}" class="btn btn-outline-primary">{{ 'Contact'|trans }}</a></li>
-                <li><a href="{{ path('category_index') }}" class="btn btn-outline-primary">{{ 'Categories'|trans }}</a></li>
+                <li><a href="{{ path('event_index') }}" class="btn btn-outline-primary">{{ 'event_index'|trans }}</a></li>
+                <li><a href="{{ path('contact_index') }}" class="btn btn-outline-primary">{{ 'contact_index'|trans }}</a></li>
+                <li><a href="{{ path('category_index') }}" class="btn btn-outline-primary">{{ 'category_index'|trans }}</a></li>
             </ul>
-        </div>
-    </div>
 {% endblock %}
