--- a/app/templates/category/show.html.twig
+++ b/app/templates/category/show.html.twig
@@ -11,9 +11,9 @@
             <dt>{{ 'label.id'|trans }}</dt>
             <dd>{{ category.id }}</dd>
             <dt>{{ 'label.created_at'|trans }}</dt>
-            <dd>{{ category.createdAt|date('Y/m/d') }}</dd>
+            <dd>{{ category.createdAt|date('d M Y') }}</dd>
             <dt>{{ 'label.updated_at'|trans }}</dt>
-            <dd>{{ category.updatedAt|date('Y/m/d') }}</dd>
+            <dd>{{ category.updatedAt|date('d M Y') }}</dd>
             <dt>{{ 'label.title'|trans }}</dt>
             <dd>{{ category.title }}</dd>
         </dl>
