--- a/app/templates/base.html.twig
+++ b/app/templates/base.html.twig
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html lang="pl">
+<html lang="{{ app.request.locale }}">
 <head>
     <meta charset="UTF-8">
-    <title>Welcome!</title>
+    <title>{{ 'title.welcome'|trans }}</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link rel="stylesheet" href="{{ asset('css/styles.css') }}">
 </head>
@@ -13,17 +13,15 @@
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                 <div class="navbar-nav">
-                    <a class="nav-item nav-link active" href="{{ url('main_index') }}">Strona główna <span class="sr-only">(current)</span></a>
-                    <a class="nav-item nav-link" href="{{url('event_index')}}">Wydarzenia</a>
-                    <a class="nav-item nav-link" href="{{ url('contact_index') }}">Kontakty</a>
-                    <a class="nav-item nav-link" href="{{ url('category_index') }}">Kategorie</a>
+                    <a class="nav-item nav-link active" href="{{ url('main_index') }}">{{ 'title.main_index'|trans }} <span class="sr-only">(current)</span></a>
+                    <a class="nav-item nav-link" href="{{ url('event_index') }}">{{ 'title.event_list'|trans }}</a>
+                    <a class="nav-item nav-link" href="{{ url('contact_index') }}">{{ 'title.contact_list'|trans }}</a>
+                    <a class="nav-item nav-link" href="{{ url('category_index') }}">{{ 'title.category_list'|trans }}</a>
                 </div>
             </div>
         </nav>
-        <!-- Login button -->
-        <a href="{{ url('app_logout') }}"><div class="right_element">Wyloguj</div></a>
-        {#        {% else %}#}
-        {#                <a href="{{ url('app_login') }}"><div class="right_element">{{ 'action_login'|trans }}</div></a>#}
+        <!-- Logout button -->
+        <a href="{{ url('app_logout') }}"><div class="right_element">{{ 'action.logout'|trans }}</div></a>
     {% endif %}
 
     {% block body %}{% endblock %}
