--- a/app/templates/category/index.html.twig
+++ b/app/templates/category/index.html.twig
@@ -26,8 +26,8 @@
             {% for category in pagination.items %}
                 <tr>
                     <td>{{ category.id }}</td>
-                    <td>{{ category.createdAt|date('Y/m/d') }}</td>
-                    <td>{{ category.updatedAt|date('Y/m/d') }}</td>
+                    <td>{{ category.createdAt|date('d M Y') }}</td>
+                    <td>{{ category.updatedAt|date('d M Y') }}</td>
                     <td>{{ category.title }}</td>
                     <td>
                         <a href="{{ path('category_show', {id: category.id}) }}" title="{{ 'action.show'|trans }}" class="btn btn-info">{{ 'action.show'|trans }}</a>
