--- a/app/templates/event/show.html.twig
+++ b/app/templates/event/show.html.twig
@@ -19,7 +19,7 @@
             <dt>{{ 'label.category'|trans }}</dt>
             <dd>{{ event.category.title }}</dd>
             <dt>{{ 'label.event_date'|trans }}</dt>
-            <dd>{{ event.eventDate|date('Y/m/d H:i') }}</dd>
+            <dd>{{ event.eventDate|date('d M Y H:i') }}</dd>
         </dl>
         <p>
             <a href="{{ url('event_index') }}" title="{{ 'action.back_to_list'|trans }}">
