--- a/app/templates/security/login.html.twig
+++ b/app/templates/security/login.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Zaloguj się!{% endblock %}
+{% block title %}{{ 'title.login'|trans }}{% endblock %}
 
 {% block body %}
     <form method="post">
@@ -10,14 +10,15 @@
 
         {% if app.user %}
             <div class="mb-3">
-                Jesteś zalogowany jako {{ app.user.userIdentifier }}, <a href="{{ path('app_logout') }}">Wyloguj się</a>
+                {{ 'login.logged_in_as'|trans({'%username%': app.user.userIdentifier}) }},
+                <a href="{{ path('app_logout') }}">{{ 'action.logout'|trans }}</a>
             </div>
         {% endif %}
 
-        <h1 class="h3 mb-3 font-weight-normal">Proszę się zalogować</h1>
-        <label for="inputEmail">Email</label>
+        <h1 class="h3 mb-3 font-weight-normal">{{ 'login.please_sign_in'|trans }}</h1>
+        <label for="inputEmail">{{ 'label.email'|trans }}</label>
         <input type="email" value="{{ last_username }}" name="email" id="inputEmail" class="form-control" autocomplete="email" required autofocus>
-        <label for="inputPassword">Hasło</label>
+        <label for="inputPassword">{{ 'label.password'|trans }}</label>
         <input type="password" name="password" id="inputPassword" class="form-control" autocomplete="current-password" required>
 
         <input type="hidden" name="_csrf_token"
@@ -26,12 +27,12 @@
 
         <div class="checkbox mb-3">
             <label>
-                <input type="checkbox" name="_remember_me"> Zapamiętaj mnie
+                <input type="checkbox" name="_remember_me"> {{ 'login.remember_me'|trans }}
             </label>
         </div>
 
         <button class="btn btn-lg btn-primary" type="submit">
-            Zaloguj się
+            {{ 'action.login'|trans }}
         </button>
     </form>
 {% endblock %}
